# HiIWouldLikeToBuy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.yaml  vcpkg.json
.github/workflows/: cmake-single-platform.yml  cmake-windows.yml
src/: CMakeLists.txt  Config.cpp  Config.h  LogWatcher.cpp  LogWatcher.h  main.cpp
src/notify/: INotifier.h  TelegramNotifier.cpp  TelegramNotifier.h
